<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Physical Tracker</string>

    <string name="home_button" translatable="false">Home</string>">
    <string name="calendar_button" translatable="false">Calendar</string>">
    <string name="profile_button" translatable="false">Profile</string>">
    <string name="geofence_button" translatable="false">Geofence</string>">

    <string name="save_button">Salva</string>
    <string name="cancel_button">Annulla</string>
    <string name="greetings">Ciao</string>

    <string name="settings">Impostazioni</string>

    <string name="preferences_username" translatable="false" >preferences_username</string>
    <string name="preferences_username_default" translatable="false">user</string>
    <string name="username_default">Inserisci nome utente</string>
    <string name="username_tag"> Nome utente </string>

    <string name="start_button">Avvia</string>
    <string name="pause_button">Pausa</string>
    <string name="end_button">Termina</string>


    <string name="preferences_theme" translatable="false">preferences_theme</string>
    <string name="theme_default">Seleziona tema</string>
    <string name="theme_tag"> Tema Scuro </string>

    <string name="walk_tag">Camminata</string>
    <string name="run_tag">Corsa</string>
    <string name="chilling_tag">Riposo</string>
    <string name="drive_tag">Guida</string>

    <string name="time_tag">Tempo</string>
    <string name="speed_tag">Velocità km/h</string>
    <string name="calories_tag">Calorie</string>
    <string name="steps_tag">Passi</string>

    <string name="default_steps" translatable="false">0</string>
    <string name="default_distance" translatable="false">0 m</string>
    <string name="default_speed" translatable="false">0,0</string>
    <string name="default_calories" translatable="false">0 kcal</string>
    <string name="default_time" translatable="false">00:00:00</string>
    <string name="default_height" translatable="false">-</string>
    <string name="default_weight" translatable="false">-</string>
    <string name="no_info" translatable="false">--</string>

    <string name="preferences_user" translatable="false">preferences_user</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="preferences_height" translatable="false">preferences_height</string>
    <string name="preferences_height_default" translatable="false">--</string>
    <string name="preferences_weight" translatable="false">preferences_weight</string>
    <string name="preferences_weight_default" translatable="false">--</string>

    <string name="height_tag">Altezza (cm)</string>
    <string name="weight_tag">Peso (kg)</string>
    <string name="enter_height">Inserisci altezza</string>
    <string name="enter_weight">Inserisci peso (kg)</string>

    <string name="geofence_top_description">Tieni premuto sulla mappa per aggiungere aree di controllo. Tocca sui markers per eliminarle</string>
    <string name="radius_description">Inserisci il raggio in metri</string>
    <string name="error_radius">Inserisci un valore compreso tra 100 e 2000 metri</string>
    <string name="color_circle_description">Colore cerchio</string>
    <string name="change_color_button">Cambia colore</string>
    <string name="switch_removing_geofence_button">Attiva rimozione geofence</string>

    <string name="success_add_geofence">Geofence aggiunto correttamente</string>
    <string name="error_add_geofence">Errore aggiunta geofence</string>
    <string name="geofence_enter">Entrato nel geofence</string>
    <string name="geofence_dwell">Permanenza nel geofence</string>
    <string name="geofence_exit">Uscita dal geofence</string>
    <string name="error_fetch_location">Errore caricamento posizione</string>
    <string name="success_geofence_removal">Geofence rimosso correttamente</string>
    <string name="error_geofence_removal">Errore rimozione geofence</string>

    <string name="insert_new_activity_title">NUOVA ATTIVITÀ</string>
    <string name="insert_new_activity_description">Le attività aggiunte a posteriori non godranno dei dati registrati dai sensori, come ad esempio i passi e la velocità</string>
    <string name="select_date">Seleziona data</string>
    <string name="select_start_time">Seleziona ora di inizio</string>
    <string name="select_end_time">Seleziona ora di fine</string>
    <string name="select_type_activity">Seleziona tipo attività</string>
    <string name="error_empty_fields">Compila tutti i campi</string>
    <string name="error_time_interval">Orari inizio e fine non validi</string>
    <string name="error_date">L\'attività deve essere completata prima di questo momento</string>
    <string name="add_old_activity_success">Attività aggiunta correttamente</string>

    <string-array name="activities_array">
        <item>@string/walk_tag</item>
        <item>@string/run_tag</item>
        <item>@string/chilling_tag</item>
        <item>@string/drive_tag</item>
    </string-array>

    <string name="detail_activity_title">Dettagli attività</string>
    <string name="average_speed">Velocità media</string>
    <string name="duration_activity">Durata totale</string>
    <string name="total_steps">Passi</string>
    <string name="total_calories">Calorie totali</string>
    <string name="total_distance">Distanza totale</string>
    <string name="user">Utente</string>

    <string name="open_details">Apri</string>

    <string name="name_update">Nome aggiornato</string>
    <string name="success_add_weight">Peso inserito correttamente</string>
    <string name="success_add_height">Altezza inserita correttamente</string>
    <string name="error_add_weight">Errore: peso inserito non valido</string>
    <string name="error_add_height">Errore: altezza inserita non valida</string>

    <string name="monday">Lun</string>
    <string name="tuesday">Mar</string>
    <string name="wednesday">Mer</string>
    <string name="thursday">Gio</string>
    <string name="friday">Ven</string>
    <string name="saturday">San</string>
    <string name="sunday">Dom</string>

    <string name="show_others_activities">Mostra attività altrui</string>
    <string name="show_yours_activities">Mostra tue attività</string>
    <string name="add_new_activity">Aggiungi attività</string>

    <string name="no_activity_registered">Non hai registrato ancora attività</string>
    <string name="record_first_activity">Registra la tua prima attività</string>
    <string name="you_are_still">Sei fermo da un po\'!</string>
    <string name="record_some_activities">Registra delle attività</string>
    <string name="tracking_location">Tracciando la tua posizione…</string>
    <string name="geofence_tracking" translatable="false">Geofence tracking</string>

    <string name="steps_4_today">Passi di oggi</string>
    <string name="last_activity_done">Ultima attività fatta</string>

    <string name="OnGoingNotification">C\'è un attività in corso</string>
    <string name="StopNotification">C\'è un attività in pausa</string>

    <string name="activity_permission">Permesso di Riconoscimento delle Attività</string>
    <string name="activity_permission_description">Per fornirti una migliore esperienza, l\'app necessita del riconoscimento delle attività fisiche. In questo modo possiamo personalizzare le funzionalità in base al tuo livello di attività.</string>
    <string name="approve">Concedi</string>

    <string name="enable_notification">Abilita notifiche</string>
    <string name="enable_notification_description">Abilitando le notifiche, possiamo inviarti notifiche periodiche e aggiornarti sulle attività in corso.</string>

    <string name="export_dialog_title">Esporta Attività</string>
    <string name="export_dialog_description">Esportando le attività in un file csv, sarai in grado di condividerle con altri utenti tramite un app esterna!</string>

    <string name="import_dialog_title">Importa Attività</string>
    <string name="import_dialog_description">Importando le attività tramite un file csv, sarai in grado di mostrare le attività di altri utenti nel tuo calendario</string>

    <string name="continue_button"> Continua </string>

</resources>