<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
            app:key="@string/preferences_username"
            app:title="@string/username_tag"
            app:icon="@drawable/baseline_person_24" />

    <SwitchPreference
            app:key="@string/preferences_theme"
            app:title="@string/theme_tag" />

    <EditTextPreference
            app:key="@string/preferences_height"
            app:title="@string/height_tag"
            app:dialogTitle="@string/enter_height"
           />

    <EditTextPreference
            app:key="@string/preferences_weight"
    app:title="@string/weight_tag"
    app:dialogTitle="@string/enter_weight" />

</androidx.preference.PreferenceScreen>