<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:backgroundTint="@color/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/timeTextView"
            android:text="@string/time_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sarala_bold"
            android:textSize="32sp"
            android:textColor="@color/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/timer"
            android:layout_marginBottom="16dp" />

    <TextView
            android:id="@+id/timer"
            android:text="@string/default_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sarala_bold"
            android:textSize="48sp"
            android:textColor="@color/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    <Button
            android:text="@string/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/pauseButton"
            android:textColor="@color/white"
            android:backgroundTint="@color/primary"
            app:layout_constraintTop_toBottomOf="@+id/timer" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endButton"
            android:text="@string/end_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pauseButton"
            android:textColor="@color/white"
            android:backgroundTint="@color/primary"
            app:layout_constraintTop_toTopOf="@+id/startButton"
            app:layout_constraintBottom_toBottomOf="@+id/pauseButton" />

    <Button
            android:text="@string/pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pauseButton"
            app:layout_constraintEnd_toStartOf="@+id/endButton"
            app:layout_constraintStart_toEndOf="@+id/startButton"
            android:textColor="@color/white"
            android:backgroundTint="@color/primary"
            app:layout_constraintTop_toTopOf="@+id/startButton"
            app:layout_constraintBottom_toBottomOf="@+id/startButton" />

</androidx.constraintlayout.widget.ConstraintLayout>