<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:text="00:00:00"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timer"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="148dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <Button
            android:text="@string/pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pauseButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="50dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp" />

    <Button
            android:text="@string/end_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="50dp" />

    <Button
            android:text="@string/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="160dp"
            android:layout_marginEnd="160dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:text="Passi:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stepsLabel"
            app:layout_constraintTop_toBottomOf="@+id/timer"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="187dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stepsCounter"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/stepsLabel"
            android:layout_marginEnd="204dp"
            app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>