<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_card_view"
            android:padding="@dimen/padding_constraint_layout">

        <TextView
                android:text="@string/no_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/typeActivityTextView"
                style="@style/detail_activity_type_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_info"
                style="@style/detail_activity_time_date"
                app:layout_constraintTop_toBottomOf="@+id/typeActivityTextView"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="20sp"
                android:layout_marginTop="24dp" />

        <TextView
                android:text="@string/no_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/intervalTimeTextView"
                style="@style/detail_activity_time_date"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/dateTextView"
                app:layout_constraintStart_toStartOf="@+id/dateTextView"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/radius_card_view"
            android:layout_margin="@dimen/margin_card_view_chose_activity"
            android:backgroundTint="@color/secondary"
            android:padding="@dimen/padding_constraint_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_constraint_layout">

            <TextView
                    android:id="@+id/activityDetailTitleTextView"
                    android:text="@string/detail_activity_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/detail_activity_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/timeTextView"
                    android:text="@string/average_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/detail_activity_stats_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/activityDetailTitleTextView"
                    android:layout_marginTop="24dp" />

            <TextView
                    android:id="@+id/valueAvSpeedTextView"
                    android:text="@string/no_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/detail_activity_stats_value"
                    app:layout_constraintTop_toBottomOf="@+id/timeTextView"
                    app:layout_constraintStart_toStartOf="@+id/timeTextView"
                    android:layout_marginTop="@dimen/space_between_title_value" />

            <TextView
                    android:id="@+id/totalTimeTextView"
                    android:text="@string/duration_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/detail_activity_stats_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/timeTextView"
                    app:layout_constraintBottom_toBottomOf="@+id/timeTextView"
                    app:layout_constraintStart_toEndOf="@+id/timeTextView" />

            <TextView
                    android:text="@string/no_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/totalTimeValueTextView"
                    style="@style/detail_activity_stats_value"
                    android:layout_marginTop="@dimen/space_between_title_value"
                    app:layout_constraintStart_toStartOf="@+id/totalTimeTextView"
                    app:layout_constraintTop_toBottomOf="@+id/totalTimeTextView" />

            <TextView
                    android:text="@string/total_calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/totalCaloriesTextView"
                    style="@style/detail_activity_stats_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/valueAvSpeedTextView"
                    android:layout_marginTop="@dimen/space_between_type_time" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/totalCaloriesValueTextView"
                    android:text="@string/no_info"
                    style="@style/detail_activity_stats_value"
                    android:layout_marginTop="@dimen/space_between_title_value"
                    app:layout_constraintTop_toBottomOf="@+id/totalCaloriesTextView"
                    app:layout_constraintStart_toStartOf="@+id/totalCaloriesTextView" />

            <TextView
                    android:text="@string/total_steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/totalStepsTextView"
                    style="@style/detail_activity_stats_title"
                    app:layout_constraintTop_toTopOf="@+id/totalCaloriesTextView"
                    app:layout_constraintBottom_toBottomOf="@+id/totalCaloriesTextView"
                    app:layout_constraintStart_toStartOf="@+id/totalTimeTextView" />

            <TextView
                    android:text="@string/no_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/totalStepsValueTextView"
                    style="@style/detail_activity_stats_value"
                    android:layout_marginTop="@dimen/space_between_title_value"
                    app:layout_constraintStart_toStartOf="@+id/totalStepsTextView"
                    app:layout_constraintTop_toBottomOf="@+id/totalStepsTextView" />

            <TextView
                    android:text="@string/total_distance"
                    style="@style/detail_activity_stats_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/totalDistanceTextView"
                    app:layout_constraintTop_toBottomOf="@+id/totalCaloriesValueTextView"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="parent" />

            <TextView
                    android:id="@+id/valueTotalDistanceTextView"
                    android:text="@string/no_info"
                    style="@style/detail_activity_stats_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/totalDistanceTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp" />

            <TextView
                    android:id="@+id/userTextView"
                    android:text="@string/user"
                    style="@style/detail_activity_stats_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/totalStepsTextView"
                    app:layout_constraintTop_toTopOf="@+id/totalDistanceTextView"
                    app:layout_constraintBottom_toBottomOf="@+id/totalDistanceTextView" />

            <TextView
                    android:id="@+id/valueUserTextView"
                    android:text="@string/no_info"
                    style="@style/detail_activity_stats_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/userTextView"
                    app:layout_constraintStart_toStartOf="@+id/userTextView"
                    android:layout_marginTop="8dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>