<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_linear_layout"
                android:layout_weight="1">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/radius_card_view"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/margin_card_view">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/secondary"
                        android:padding="@dimen/padding_constraint_layout">

                    <TextView
                            android:id="@+id/timeTextView"
                            android:text="@string/time_tag"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/card_activity_title"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                            android:id="@+id/timer"
                            android:text="@string/default_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/card_activity_stat"
                            app:layout_constraintStart_toStartOf="@+id/timeTextView"
                            app:layout_constraintEnd_toEndOf="@+id/timeTextView"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/timeTextView"
                            android:layout_marginTop="@dimen/space_between_title_value_card_activity" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/radius_card_view"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/margin_card_view">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/secondary"
                        android:padding="@dimen/padding_constraint_layout">

                    <TextView
                            android:text="@string/speed_tag"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/speedTextView"
                            style="@style/card_activity_title"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                            android:text="@string/default_speed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/valueSpeedTextView"
                            style="@style/card_activity_stat"
                            app:layout_constraintStart_toStartOf="@+id/speedTextView"
                            app:layout_constraintEnd_toEndOf="@+id/speedTextView"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/speedTextView"
                            android:layout_marginTop="@dimen/space_between_title_value_card_activity" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>